# clientgin/client1.go
@@ -3,10 +3,13 @@ package main
 import (
 	"context"
 	"crypto/tls"
+	"encoding/json"
 	"flag"
 	"fmt"
 	"os"
 	"projectThrift/clientgin/routes/docs"
+
+	"github.com/go-playground/validator/v10"
 
 	"github.com/apache/thrift/lib/go/thrift"
 	"github.com/gin-gonic/gin"
@@ -19,12 +22,51 @@ import (
 	"strconv"
 )
 
+var validate *validator.Validate
 var ctx = context.Background()
 var client user_item.Item
 
 type Response struct {
 	Data  map[string]interface{}
 	Error map[string]interface{}
+}
+type RequestItem struct {
+	ImageUrl          string                     `json:"imageUrl"`
+	Url               string                     `json:"url"`
+	Name              string                     `json:"name"`
+	Status            int16                      `json:"status"`
+	CollectionId      int16                      `json:"collectionId"`
+	ArrOwnerAddress   map[string]int             `json:"arrOwnerAddress"`
+	ArrOwnerUid       map[string]int             `json:"arrOwnerUid"`
+	CreatorAddress    string                     `json:"creatorAddress"`
+	OwnerAddress      string                     `json:"ownerAddress"`
+	OwnerUID          int16                      `json:"ownerUID"`
+	CreatorUid        int16                      `json:"creatorUid"`
+	ExternalLink      string                     `json:"externalLink"`
+	EventIds          []int16                    `json:"eventIds"`
+	TotalView         int16                      `json:"totalView"`
+	TotalLike         int16                      `json:"totalLike"`
+	Edition           int16                      `json:"edition"`
+	MetaData          string                     `json:"metaData"`
+	MediaType         string                     `json:"mediaType"`
+	CategoryType      int16                      `json:"categoryType"`
+	ProductNo         string                     `json:"productNo"`
+	TotalEdition      int16                      `json:"totalEdition"`
+	ExtendData        user_item.TExtendData      `json:"extendData"`
+	IsSensitive       bool                       `json:"isSensitive"`
+	Hidden            bool                       `json:"hidden"`
+	Price             string                     `json:"price"`
+	TokenId           string                     `json:"tokenId"`
+	ContractAddress   string                     `json:"contractAddress"`
+	Chain             string                     `json:"chain"`
+	CurrencyAddress   user_item.TCurrencyAddress `json:"currencyAddress"`
+	TypeNft           int16                      `json:"typeNft"`
+	TotalClaim        int32                      `json:"totalClaim"`
+	TotalLimit        int32                      `json:"totalLimit"`
+	StartAt           int16                      `json:"startAt"`
+	EndAt             int16                      `json:"endAt"`
+	UnlockableContent string                     `json:"unlockableContent"`
+	IsLootbox         bool                       `validate:"boolean" json:"isLootbox"`
 }
 
 func runClient(transportFactory thrift.TTransportFactory, protocolFactory thrift.TProtocolFactory, addr string, secure bool) (thrift.TTransport, error) {
@@ -111,6 +153,7 @@ func Get() (thrift.TTransport, thrift.TProtocolFactory) {
 	return transport, protocolFactory
 }
 func main() {
+	validate = validator.New()
 	transport, protocolFactory := Get()
 	fmt.Println(transport, protocolFactory)
 	client = user_item.NewItemClientFactory(transport, protocolFactory)
@@ -168,15 +211,52 @@ func getItems(c *gin.Context) {
 // @Description do ping
 // @Tags Item
 // @Accept json
-// @Param NewItem body user_item.TItem true "Thông tin item mới "
+// @Param NewItem body RequestItem true "Thông tin Item mới "
 // @Produce json
 // @Success 200 {object} user_item.TItem
 // @Router /item [post]
 func newItems(c *gin.Context) {
-	var NewItem user_item.TItem
-	if err := c.BindJSON(&NewItem); err != nil {
+	var reqItem RequestItem
+	err := c.BindJSON(&reqItem)
+	if err != nil {
+		fmt.Println(err)
+	}
+	err = validate.Struct(reqItem)
+	if err != nil {
+		if _, ok := err.(*validator.InvalidValidationError); ok {
+			fmt.Println(err)
+			return
+		}
+
+		for _, err := range err.(validator.ValidationErrors) {
+
+			fmt.Println(err.Namespace())
+			fmt.Println(err.Field())
+			fmt.Println(err.StructNamespace())
+			fmt.Println(err.StructField())
+			fmt.Println(err.Tag())
+			fmt.Println(err.ActualTag())
+			fmt.Println(err.Kind())
+			fmt.Println(err.Type())
+			fmt.Println(err.Value())
+			fmt.Println(err.Param())
+			fmt.Println()
+		}
+		b := map[string]interface{}{"code": http.StatusBadRequest, "message": err.Error()}
+		res := Response{Data: nil, Error: b}
+		c.IndentedJSON(http.StatusOK, res)
+		// from here you can create your own error messages in whatever language you wish
 		return
 	}
+	var NewItem user_item.TItem
+	d, _ := json.Marshal(reqItem)
+	err = json.Unmarshal(d, &NewItem)
+
+	if err != nil {
+		fmt.Println(err)
+		return
+	}
+
 	val, err := client.AddItem(ctx, int16(NewItem.ID), &NewItem)
 
 	if err != nil {
@@ -186,7 +266,7 @@ func newItems(c *gin.Context) {
 		return
 	}
 	b := map[string]interface{}{"code": http.StatusOK, "message": "Success!"}
-	a := map[string]interface{}{"data": val, "err": b}
+	a := map[string]interface{}{"data": val}
 	res := Response{Data: a, Error: b}
 
 	c.IndentedJSON(http.StatusCreated, res)
@@ -305,7 +385,7 @@ func GetItemByUserID(c *gin.Context) {
 		c.IndentedJSON(http.StatusOK, res)
 		return
 	}
-	b := map[string]interface{}{"code": http.StatusBadRequest, "message": "Success!"}
+	b := map[string]interface{}{"code": http.StatusOK, "message": "Success!"}
 	a := map[string]interface{}{"data": val, "total": len(val)}
 	res := Response{Data: a, Error: b}
 	c.IndentedJSON(http.StatusOK, res)
